--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.14.0",
     "gulp": "^3.9.1",
     "node-sass": "^3.10.0",
+    "postcss-cli": "^2.6.0",
     "shelljs": "^0.7.4"
   }
 }
